# follow-wall-l4ros2

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml  videos.txt
.github/workflows/: codecov.yml  main.yaml
follow-wall/: CMakeLists.txt  package.xml
follow-wall/include/follow-wall/: ActuationNode.hpp
follow-wall/src/: follow_wall_exec.cpp  test_sensing_node.cpp
follow-wall/src/follow-wall/: ActuationNode.cpp  SensingNode.cpp
follow_wall/: CMakeLists.txt  package.xml
follow_wall/include/follow_wall/: ActuationNode.hpp  SensingNode.hpp
follow_wall/launch/: follow_wall_launch.py
follow_wall/src/: follow_wall_main.cpp  test_actuation_node.cpp  test_sensing_node.cpp
follow_wall/src/follow_wall/: ActuationNode.cpp  SensingNode.cpp
follow_wall/test/: CMakeLists.txt  example_sensing_test.cpp
follow_wall_interfaces/msg/: LaserInfo.msg
include/follow-wall-l4ros2/: ActuationNode.hpp  SensingNode.hpp
src/: follow_wall_exec.cpp  test_sensing_node.cpp
src/follow-wall-l4ros2/: SensingNode.cpp
src/follow_wall_interfaces/: CMakeLists.txt  package.xml
src/follow_wall_interfaces/msg/: LaserInfo.msg
